# halo2-encryption

./: Cargo.toml  README.md
halo2-elgmal/: Cargo.toml
halo2-elgmal/examples/: encrypt-block.rs
halo2-elgmal/src/: add_chip.rs  circuit.rs  lib.rs
halo2wrong-elgmal/: Cargo.toml
halo2wrong-elgmal/examples/: encrypt-block.rs  encrypt-recursive.rs
halo2wrong-elgmal/src/: aggregation.rs  circuit.rs  lib.rs  utils.rs
