[package]
name = "halo2wrong-elgmal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
group = "0.11"
halo2_proofs = { path = "../../halo2/halo2_proofs", default-features = true }
halo2_gadgets = { path = "../../halo2/halo2_gadgets", default-features = true }
pairing_bn256 = { git = "https://github.com/appliedzkp/pairing", tag = "v0.1.1" }
halo2-ecc-circuit-lib = { path = "../../halo2-snark-aggregator/halo2-ecc-circuit-lib" }
halo2-snark-aggregator-circuit = { path = "../../halo2-snark-aggregator/halo2-snark-aggregator-circuit" }
halo2-snark-aggregator-api = { path = "../../halo2-snark-aggregator/halo2-snark-aggregator-api" }
# ecc = { git = "https://github.com/privacy-scaling-explorations/halo2wrong" }
poseidon = { git = "https://github.com/appliedzkp/poseidon.git", branch = "circuit" }

rayon = "1.5"
ark-std = { version = "^0.3.0", default-features = false }
